--- a/i18n/sources/careers.translations.json
+++ b/i18n/sources/careers.translations.json
@@ -53,9 +53,9 @@
     "careers.growing": "Growing Fast",
     "careers.jobDescription": "Job Description",
     "careers.lastName": "Last Name",
+    "careers.linkedInProfile": "LinkedIn Profile (Optional)",
     "careers.linkedin": "LinkedIn Profile",
     "careers.linkedinInvalid": "Invalid LinkedIn URL",
-    "careers.linkedInProfile": "LinkedIn Profile (Optional)",
     "careers.location": "Location",
     "careers.locationPh": "City, Country",
     "careers.notFound.contact": "Contact our HR team",
@@ -102,13 +102,16 @@
     "careers.portfolioWebsite": "Portfolio/Website (Optional)",
     "careers.posted": "Posted",
     "careers.postedOn": "Posted on",
+    "careers.presignFailed": "Presign Failed",
     "careers.remote": "Remote",
     "careers.requirements": "Requirements",
     "careers.resume": "Resume/CV",
     "careers.resumeHint": "PDF, DOC, DOCX (up to 5MB)",
     "careers.resumeRequired": "Resume is required",
+    "careers.resumeScanStatus": "Resume Scan Status",
     "careers.resumeSize": "File size must be less than 5MB",
     "careers.resumeType": "Invalid file type. Only PDF, DOC, DOCX are allowed",
+    "careers.resumeUploadNote": "Resume Upload Note",
     "careers.salary": "Salary",
     "careers.skills": "Skills",
     "careers.skillsHint": "Separate skills with commas",
@@ -123,6 +126,7 @@
     "careers.title": "Join Our Team",
     "careers.tooMany": "Too many applications submitted. Please try later",
     "careers.type": "Type",
+    "careers.uploadFailed": "Upload Failed",
     "careers.uploadFile": "Upload a file",
     "careers.uploadResume": "Upload Resume",
     "careers.urgentPosition": "Urgent Position",
@@ -183,9 +187,9 @@
     "careers.growing": "نمو سريع",
     "careers.jobDescription": "وصف الوظيفة",
     "careers.lastName": "الاسم الأخير",
+    "careers.linkedInProfile": "ملف LinkedIn (اختياري)",
     "careers.linkedin": "ملف LinkedIn",
     "careers.linkedinInvalid": "رابط LinkedIn غير صحيح",
-    "careers.linkedInProfile": "ملف LinkedIn (اختياري)",
     "careers.location": "الموقع",
     "careers.locationPh": "المدينة، البلد",
     "careers.notFound.contact": "تواصل مع فريق الموارد البشرية لدينا",
@@ -232,13 +236,16 @@
     "careers.portfolioWebsite": "موقع الأعمال (اختياري)",
     "careers.posted": "تاريخ النشر",
     "careers.postedOn": "نُشرت في",
+    "careers.presignFailed": "Presign فشل",
     "careers.remote": "عن بُعد",
     "careers.requirements": "المتطلبات",
     "careers.resume": "السيرة الذاتية",
     "careers.resumeHint": "PDF، DOC، DOCX (حتى 5 ميجابايت)",
     "careers.resumeRequired": "السيرة الذاتية مطلوبة",
+    "careers.resumeScanStatus": "Resume Scan الحالة",
     "careers.resumeSize": "حجم الملف يجب أن يكون أقل من 5 ميجابايت",
     "careers.resumeType": "نوع الملف غير صحيح. يُسمح فقط بـ PDF وDOC وDOCX",
+    "careers.resumeUploadNote": "[AR] Resume Upload Note",
     "careers.salary": "الراتب",
     "careers.skills": "المهارات",
     "careers.skillsHint": "افصل بين المهارات بفواصل",
@@ -253,6 +260,7 @@
     "careers.title": "انضم إلى فريقنا",
     "careers.tooMany": "تم إرسال عدد كبير جدًا من الطلبات. يرجى المحاولة لاحقًا",
     "careers.type": "النوع",
+    "careers.uploadFailed": "Upload فشل",
     "careers.uploadFile": "تحميل ملف",
     "careers.uploadResume": "رفع السيرة الذاتية",
     "careers.urgentPosition": "وظيفة عاجلة",
