--- a/i18n/sources/finance.translations.json
+++ b/i18n/sources/finance.translations.json
@@ -13,6 +13,7 @@
     "finance.balance.assets": "Assets",
     "finance.balance.equity": "Equity",
     "finance.balance.error": "Failed to load balance sheet",
+    "finance.balance.forbidden": "Forbidden",
     "finance.balance.liabilities": "Liabilities",
     "finance.balance.notOk": "Equation mismatch detected",
     "finance.balance.ok": "Assets = Liabilities + Equity",
@@ -24,7 +25,6 @@
     "finance.budget.annual": "Annual",
     "finance.budget.available": "Available",
     "finance.budget.budgetDescription": "Budget Description",
-    "finance.budget.budgetedAmount": "Budgeted Amount",
     "finance.budget.budgetName": "Budget Name",
     "finance.budget.budgetOwner": "Budget Owner",
     "finance.budget.budgetPeriod": "Budget Period",
@@ -32,6 +32,7 @@
     "finance.budget.budgetSummary": "Budget Summary",
     "finance.budget.budgetTemplate": "Budget Template",
     "finance.budget.budgetVsActual": "Budget vs Actual",
+    "finance.budget.budgetedAmount": "Budgeted Amount",
     "finance.budget.categoriesAmounts": "Categories & Amounts",
     "finance.budget.categoriesRequired": "Categories are required",
     "finance.budget.category": "Category",
@@ -95,9 +96,6 @@
     "finance.dueDate": "Due Date",
     "finance.errors.noOrgId": "No organization ID found",
     "finance.errors.noOrgSession": "Error: No organization ID found in session",
-    "finance.support.selectOrg": "Select a customer organization to enable finance data.",
-    "finance.support.selectOrgHint": "Use the Support Organization switcher in the top bar to search by corporate ID.",
-    "finance.support.activeOrg": "Support context: {{name}}",
     "finance.expense.account": "Expense Account",
     "finance.expense.addLineItem": "Add Line Item",
     "finance.expense.administrative": "Administrative",
@@ -165,6 +163,7 @@
     "finance.groupByType": "Group by Type",
     "finance.income.error": "Failed to load income statement",
     "finance.income.expense": "Expenses",
+    "finance.income.forbidden": "Forbidden",
     "finance.income.net": "Net Income",
     "finance.income.period": "Period",
     "finance.income.revenue": "Revenue",
@@ -175,14 +174,14 @@
     "finance.invoice.addItem": "Add Item",
     "finance.invoice.amountDue": "Amount Due",
     "finance.invoice.autoPostJournal": "Auto-post to Journal",
+    "finance.invoice.billTo": "Bill To",
     "finance.invoice.billingAddress": "Billing Address",
     "finance.invoice.billingAddressPlaceholder": "Enter billing address...",
-    "finance.invoice.billTo": "Bill To",
     "finance.invoice.cod": "Cash on Delivery",
     "finance.invoice.costCalculator": "Cost Calculator",
-    "finance.invoice.created": "Created",
     "finance.invoice.createFromTemplate": "Create from Template",
     "finance.invoice.createInvoice": "Create Invoice",
+    "finance.invoice.created": "Created",
     "finance.invoice.customerName": "Customer Name",
     "finance.invoice.customerNamePlaceholder": "Enter customer name...",
     "finance.invoice.customerRequired": "Customer is required",
@@ -229,12 +228,12 @@
     "finance.invoice.summary": "Invoice Summary",
     "finance.invoice.taxType": "Tax Type",
     "finance.invoice.toast.postFailure": "Failed to post invoice: {{message}}",
-    "finance.invoice.toast.posting": "Posting invoice...",
     "finance.invoice.toast.postSuccess": "Invoice posted successfully",
+    "finance.invoice.toast.posting": "Posting invoice...",
     "finance.invoice.toast.unknownError": "Unknown error",
     "finance.invoice.toast.voidFailure": "Failed to void invoice: {{message}}",
-    "finance.invoice.toast.voiding": "Voiding invoice...",
     "finance.invoice.toast.voidSuccess": "Invoice voided successfully",
+    "finance.invoice.toast.voiding": "Voiding invoice...",
     "finance.invoice.total": "Total",
     "finance.invoice.totalInvalid": "Total is invalid",
     "finance.invoice.totalPaid": "Total Paid",
@@ -341,6 +340,9 @@
     "finance.status.posted": "POSTED",
     "finance.status.void": "VOID",
     "finance.subtotal": "Subtotal",
+    "finance.support.activeOrg": "Support context: {{name}}",
+    "finance.support.selectOrg": "Select a customer organization to enable finance data.",
+    "finance.support.selectOrgHint": "Use the Support Organization switcher in the top bar to search by corporate ID.",
     "finance.supportedFormats": "Supported Formats",
     "finance.title": "Finance — Invoices",
     "finance.total": "Total",
@@ -375,6 +377,7 @@
     "finance.balance.assets": "أصول",
     "finance.balance.equity": "عدالة",
     "finance.balance.error": "فشل تحميل الميزانية العمومية",
+    "finance.balance.forbidden": "[AR] Forbidden",
     "finance.balance.liabilities": "الإلتزامات",
     "finance.balance.notOk": "تم اكتشاف عدم تطابق المعادلة",
     "finance.balance.ok": "الأصول = الخصوم + حقوق الملكية",
@@ -386,7 +389,6 @@
     "finance.budget.annual": "سنوي",
     "finance.budget.available": "متاح",
     "finance.budget.budgetDescription": "وصف الميزانية",
-    "finance.budget.budgetedAmount": "المبلغ المدرج في الميزانية",
     "finance.budget.budgetName": "اسم الميزانية",
     "finance.budget.budgetOwner": "مالك الميزانية",
     "finance.budget.budgetPeriod": "فترة الميزانية",
@@ -394,6 +396,7 @@
     "finance.budget.budgetSummary": "ملخص الميزانية",
     "finance.budget.budgetTemplate": "قالب الميزانية",
     "finance.budget.budgetVsActual": "الميزانية مقابل الفعلي",
+    "finance.budget.budgetedAmount": "المبلغ المدرج في الميزانية",
     "finance.budget.categoriesAmounts": "مبالغ الفئات",
     "finance.budget.categoriesRequired": "الفئات مطلوبة",
     "finance.budget.category": "الفئة",
@@ -457,9 +460,6 @@
     "finance.dueDate": "تاريخ الاستحقاق",
     "finance.errors.noOrgId": "لم يتم العثور على معرّف مؤسسة",
     "finance.errors.noOrgSession": "خطأ: لم يتم العثور على معرّف المؤسسة في الجلسة",
-    "finance.support.selectOrg": "اختر مؤسسة العميل لعرض بيانات المالية.",
-    "finance.support.selectOrgHint": "استخدم مُبدّل مؤسسة الدعم في الشريط العلوي للبحث بالرقم الموحد.",
-    "finance.support.activeOrg": "سياق الدعم: {{name}}",
     "finance.expense.account": "حساب المصروف",
     "finance.expense.addLineItem": "إضافة بند",
     "finance.expense.administrative": "إداري",
@@ -527,6 +527,7 @@
     "finance.groupByType": "تجميع حسب النوع",
     "finance.income.error": "فشل في تحميل بيان الدخل",
     "finance.income.expense": "نفقات",
+    "finance.income.forbidden": "[AR] Forbidden",
     "finance.income.net": "صافي الدخل",
     "finance.income.period": "فترة",
     "finance.income.revenue": "ربح",
@@ -537,14 +538,14 @@
     "finance.invoice.addItem": "إضافة بند",
     "finance.invoice.amountDue": "المبلغ المستحق",
     "finance.invoice.autoPostJournal": "ترحيل تلقائي لليومية",
+    "finance.invoice.billTo": "الفاتورة إلى",
     "finance.invoice.billingAddress": "عنوان الفواتير",
     "finance.invoice.billingAddressPlaceholder": "أدخل عنوان الفواتير...",
-    "finance.invoice.billTo": "الفاتورة إلى",
     "finance.invoice.cod": "الدفع عند الاستلام",
     "finance.invoice.costCalculator": "حاسبة التكلفة",
-    "finance.invoice.created": "تم الإنشاء",
     "finance.invoice.createFromTemplate": "إنشاء من قالب",
     "finance.invoice.createInvoice": "إنشاء فاتورة",
+    "finance.invoice.created": "تم الإنشاء",
     "finance.invoice.customerName": "اسم العميل",
     "finance.invoice.customerNamePlaceholder": "أدخل اسم العميل...",
     "finance.invoice.customerRequired": "العميل مطلوب",
@@ -591,12 +592,12 @@
     "finance.invoice.summary": "ملخص الفاتورة",
     "finance.invoice.taxType": "نوع الضريبة",
     "finance.invoice.toast.postFailure": "تعذّر ترحيل الفاتورة: {{message}}",
-    "finance.invoice.toast.posting": "جارٍ ترحيل الفاتورة...",
     "finance.invoice.toast.postSuccess": "تم ترحيل الفاتورة بنجاح",
+    "finance.invoice.toast.posting": "جارٍ ترحيل الفاتورة...",
     "finance.invoice.toast.unknownError": "خطأ غير معروف",
     "finance.invoice.toast.voidFailure": "تعذّر إلغاء الفاتورة: {{message}}",
-    "finance.invoice.toast.voiding": "جارٍ إلغاء الفاتورة...",
     "finance.invoice.toast.voidSuccess": "تم إلغاء الفاتورة بنجاح",
+    "finance.invoice.toast.voiding": "جارٍ إلغاء الفاتورة...",
     "finance.invoice.total": "الإجمالي",
     "finance.invoice.totalInvalid": "الإجمالي غير صحيح",
     "finance.invoice.totalPaid": "إجمالي المدفوع",
@@ -703,6 +704,9 @@
     "finance.status.posted": "مرحل",
     "finance.status.void": "ملغي",
     "finance.subtotal": "المجموع الفرعي",
+    "finance.support.activeOrg": "سياق الدعم: {{name}}",
+    "finance.support.selectOrg": "اختر مؤسسة العميل لعرض بيانات المالية.",
+    "finance.support.selectOrgHint": "استخدم مُبدّل مؤسسة الدعم في الشريط العلوي للبحث بالرقم الموحد.",
     "finance.supportedFormats": "الصيغ المدعومة",
     "finance.title": "المالية - الفواتير",
     "finance.total": "الإجمالي",
