--- a/i18n/sources/help.translations.json
+++ b/i18n/sources/help.translations.json
@@ -3,6 +3,12 @@
     "help.article.breadcrumb.back": "← All articles",
     "help.article.breadcrumb.home": "Help Center",
     "help.article.categoryFallback": "General",
+    "help.article.comments.auth": "Auth",
+    "help.article.comments.error": "Error",
+    "help.article.comments.placeholder": "Placeholder",
+    "help.article.comments.submit": "Submit",
+    "help.article.comments.success": "Success",
+    "help.article.comments.title": "Title",
     "help.article.feedback.helpfulAria": "Mark article as helpful",
     "help.article.feedback.no": "👎 No",
     "help.article.feedback.notHelpfulAria": "Mark article as not helpful",
@@ -19,6 +25,12 @@
     "help.article.breadcrumb.back": "← جميع المقالات",
     "help.article.breadcrumb.home": "مركز المساعدة",
     "help.article.categoryFallback": "عام",
+    "help.article.comments.auth": "[AR] Auth",
+    "help.article.comments.error": "خطأ",
+    "help.article.comments.placeholder": "[AR] Placeholder",
+    "help.article.comments.submit": "[AR] Submit",
+    "help.article.comments.success": "نجح",
+    "help.article.comments.title": "العنوان",
     "help.article.feedback.helpfulAria": "علّم المقال كمفيد",
     "help.article.feedback.no": "👎 لا",
     "help.article.feedback.notHelpfulAria": "علّم المقال كغير مفيد",
