--- a/i18n/sources/nav.translations.json
+++ b/i18n/sources/nav.translations.json
@@ -1,23 +1,40 @@
 {
   "en": {
-    "nav.administration": "Administration",
+    "nav.admin": "Admin",
+    "nav.admin.assets": "Asset Management",
+    "nav.admin.doa": "Delegation of Authority",
+    "nav.admin.facilitiesFleet": "Facilities & Fleet",
+    "nav.admin.policies": "Policies & Procedures",
     "nav.adminMenu.assets": "إدارة الأصول",
     "nav.adminMenu.doa": "تفويض الصلاحيات",
     "nav.adminMenu.facilitiesFleet": "المرافق والأسطول",
     "nav.adminMenu.policies": "السياسات والإجراءات",
     "nav.adminMenu.redirecting": "جارِ إعادة التوجيه إلى الإدارة...",
+    "nav.administration": "Administration",
     "nav.assets": "Assets",
     "nav.compliance": "Compliance",
+    "nav.compliance.auditRisk": "Audit & Risk",
+    "nav.compliance.contracts": "Contracts",
+    "nav.compliance.disputes": "Disputes & Claims",
     "nav.complianceMenu.auditRisk": "المراجعة والمخاطر",
     "nav.complianceMenu.contracts": "العقود",
     "nav.complianceMenu.disputes": "النزاعات",
     "nav.crm": "CRM",
+    "nav.crm.contracts": "Contracts & Renewals",
+    "nav.crm.directory": "Customer Directory",
+    "nav.crm.feedback": "Feedback & Complaints",
+    "nav.crm.leads": "Leads & Opportunities",
     "nav.crmMenu.contracts": "العقود",
     "nav.crmMenu.directory": "دليل العملاء",
     "nav.crmMenu.feedback": "الملاحظات",
     "nav.crmMenu.leads": "العملاء المحتملون",
     "nav.dashboard": "Dashboard",
     "nav.finance": "Finance",
+    "nav.finance.budgets": "Budgets",
+    "nav.finance.expenses": "Expenses",
+    "nav.finance.invoices": "Invoices",
+    "nav.finance.payments": "Payments",
+    "nav.finance.reports": "Finance Reports",
     "nav.financeMenu.budgets": "الميزانيات",
     "nav.financeMenu.expenses": "المصروفات",
     "nav.financeMenu.invoices": "الفواتير",
@@ -26,6 +43,12 @@
     "nav.fm": "Facility Management",
     "nav.globalHeader": "Fixzit global navigation",
     "nav.hr": "Human Resources",
+    "nav.hr.attendanceLeave": "Attendance & Leave",
+    "nav.hr.directory": "Employee Directory",
+    "nav.hr.payroll": "Payroll",
+    "nav.hr.performance": "Performance",
+    "nav.hr.recruitment": "Recruitment (ATS)",
+    "nav.hr.training": "Training",
     "nav.hrMenu.attendanceLeave": "الحضور والإجازات",
     "nav.hrMenu.directory": "دليل الموظفين",
     "nav.hrMenu.payroll": "الرواتب",
@@ -35,6 +58,10 @@
     "nav.invoices": "Invoices",
     "nav.maintenance": "Maintenance",
     "nav.marketplace": "Marketplace",
+    "nav.marketplace.bidding": "Bidding & RFQs",
+    "nav.marketplace.catalog": "Service Catalog",
+    "nav.marketplace.procurement": "Procurement",
+    "nav.marketplace.vendors": "Vendors & Suppliers",
     "nav.marketplaceMenu.bidding": "المناقصات / طلبات العروض",
     "nav.marketplaceMenu.catalog": "كتالوج الخدمات والقطع",
     "nav.marketplaceMenu.procurement": "المشتريات",
@@ -45,23 +72,40 @@
     "nav.profile": "Profile",
     "nav.projects": "Projects",
     "nav.properties": "Properties",
+    "nav.properties.documents": "Documents",
+    "nav.properties.inspections": "Inspections",
+    "nav.properties.leases": "Lease Management",
+    "nav.properties.list": "Property List & Details",
+    "nav.properties.unitsTenants": "Units & Tenants",
     "nav.propertiesMenu.documents": "المستندات",
     "nav.propertiesMenu.inspections": "التفتيش",
     "nav.propertiesMenu.leases": "إدارة عقود الإيجار",
     "nav.propertiesMenu.list": "قائمة وتفاصيل العقارات",
     "nav.propertiesMenu.unitsTenants": "الوحدات والمستأجرون",
     "nav.reports": "Reports",
+    "nav.reports.custom": "Custom Reports",
+    "nav.reports.dashboards": "Dashboards",
+    "nav.reports.standard": "Standard Reports",
     "nav.reportsMenu.custom": "التقارير المخصصة",
     "nav.reportsMenu.dashboards": "لوحات المعلومات",
     "nav.reportsMenu.standard": "التقارير القياسية",
     "nav.rfqs": "RFQs & Bids",
     "nav.settings": "Settings",
     "nav.support": "Support",
+    "nav.support.chat": "Live Chat",
+    "nav.support.kb": "Knowledge Base",
+    "nav.support.sla": "SLA Monitoring",
+    "nav.support.tickets": "Tickets",
     "nav.supportMenu.chat": "الدردشة المباشرة",
     "nav.supportMenu.kb": "قاعدة المعرفة",
     "nav.supportMenu.sla": "مراقبة اتفاقية مستوى الخدمة",
     "nav.supportMenu.tickets": "التذاكر",
     "nav.system": "System",
+    "nav.system.billing": "Subscriptions & Billing",
+    "nav.system.integrations": "Integrations",
+    "nav.system.roles": "Roles & Permissions",
+    "nav.system.settings": "System Settings",
+    "nav.system.users": "User Management",
     "nav.systemMenu.billing": "الفوترة",
     "nav.systemMenu.integrations": "التكاملات",
     "nav.systemMenu.roles": "الأدوار والصلاحيات",
@@ -73,70 +117,44 @@
     "nav.workOrders.create": "Create Work Order",
     "nav.workOrders.history": "Service History",
     "nav.workOrders.preventive": "Preventive Maintenance",
-    "nav.workOrders.trackAssign": "Track & Assign",
-    "nav.properties.list": "Property List & Details",
-    "nav.properties.unitsTenants": "Units & Tenants",
-    "nav.properties.leases": "Lease Management",
-    "nav.properties.inspections": "Inspections",
-    "nav.properties.documents": "Documents",
-    "nav.finance.invoices": "Invoices",
-    "nav.finance.payments": "Payments",
-    "nav.finance.expenses": "Expenses",
-    "nav.finance.budgets": "Budgets",
-    "nav.finance.reports": "Finance Reports",
-    "nav.hr.directory": "Employee Directory",
-    "nav.hr.attendanceLeave": "Attendance & Leave",
-    "nav.hr.payroll": "Payroll",
-    "nav.hr.recruitment": "Recruitment (ATS)",
-    "nav.hr.training": "Training",
-    "nav.hr.performance": "Performance",
-    "nav.admin.doa": "Delegation of Authority",
-    "nav.admin.policies": "Policies & Procedures",
-    "nav.admin.assets": "Asset Management",
-    "nav.admin.facilitiesFleet": "Facilities & Fleet",
-    "nav.crm.directory": "Customer Directory",
-    "nav.crm.leads": "Leads & Opportunities",
-    "nav.crm.contracts": "Contracts & Renewals",
-    "nav.crm.feedback": "Feedback & Complaints",
-    "nav.marketplace.vendors": "Vendors & Suppliers",
-    "nav.marketplace.catalog": "Service Catalog",
-    "nav.marketplace.procurement": "Procurement",
-    "nav.marketplace.bidding": "Bidding & RFQs",
-    "nav.support.tickets": "Tickets",
-    "nav.support.kb": "Knowledge Base",
-    "nav.support.chat": "Live Chat",
-    "nav.support.sla": "SLA Monitoring",
-    "nav.compliance.contracts": "Contracts",
-    "nav.compliance.disputes": "Disputes & Claims",
-    "nav.compliance.auditRisk": "Audit & Risk",
-    "nav.reports.standard": "Standard Reports",
-    "nav.reports.custom": "Custom Reports",
-    "nav.reports.dashboards": "Dashboards",
-    "nav.system.users": "User Management",
-    "nav.system.roles": "Roles & Permissions",
-    "nav.system.billing": "Subscriptions & Billing",
-    "nav.system.integrations": "Integrations",
-    "nav.system.settings": "System Settings"
+    "nav.workOrders.trackAssign": "Track & Assign"
   },
   "ar": {
-    "nav.administration": "الإدارة",
+    "nav.admin": "[AR] Admin",
+    "nav.admin.assets": "إدارة الأصول",
+    "nav.admin.doa": "تفويض الصلاحيات",
+    "nav.admin.facilitiesFleet": "المرافق والأسطول",
+    "nav.admin.policies": "السياسات والإجراءات",
     "nav.adminMenu.assets": "إدارة الأصول",
     "nav.adminMenu.doa": "تفويض الصلاحيات",
     "nav.adminMenu.facilitiesFleet": "المرافق والأسطول",
     "nav.adminMenu.policies": "السياسات والإجراءات",
     "nav.adminMenu.redirecting": "جارِ إعادة التوجيه إلى الإدارة...",
+    "nav.administration": "الإدارة",
     "nav.assets": "الأصول",
     "nav.compliance": "الامتثال",
+    "nav.compliance.auditRisk": "المراجعة والمخاطر",
+    "nav.compliance.contracts": "العقود",
+    "nav.compliance.disputes": "النزاعات والشكاوى",
     "nav.complianceMenu.auditRisk": "المراجعة والمخاطر",
     "nav.complianceMenu.contracts": "العقود",
     "nav.complianceMenu.disputes": "النزاعات",
     "nav.crm": "إدارة العلاقات",
+    "nav.crm.contracts": "العقود والتجديدات",
+    "nav.crm.directory": "دليل العملاء",
+    "nav.crm.feedback": "الملاحظات والشكاوى",
+    "nav.crm.leads": "العملاء المحتملون",
     "nav.crmMenu.contracts": "العقود",
     "nav.crmMenu.directory": "دليل العملاء",
     "nav.crmMenu.feedback": "الملاحظات",
     "nav.crmMenu.leads": "العملاء المحتملون",
     "nav.dashboard": "لوحة التحكم",
     "nav.finance": "المالية",
+    "nav.finance.budgets": "الميزانيات",
+    "nav.finance.expenses": "المصروفات",
+    "nav.finance.invoices": "الفواتير",
+    "nav.finance.payments": "المدفوعات",
+    "nav.finance.reports": "تقارير المالية",
     "nav.financeMenu.budgets": "الميزانيات",
     "nav.financeMenu.expenses": "المصروفات",
     "nav.financeMenu.invoices": "الفواتير",
@@ -145,6 +163,12 @@
     "nav.fm": "إدارة المنشآت",
     "nav.globalHeader": "التنقل العالمي لفيكزت",
     "nav.hr": "الموارد البشرية",
+    "nav.hr.attendanceLeave": "الحضور والإجازات",
+    "nav.hr.directory": "دليل الموظفين",
+    "nav.hr.payroll": "الرواتب",
+    "nav.hr.performance": "الأداء",
+    "nav.hr.recruitment": "التوظيف (ATS)",
+    "nav.hr.training": "التدريب",
     "nav.hrMenu.attendanceLeave": "الحضور والإجازات",
     "nav.hrMenu.directory": "دليل الموظفين",
     "nav.hrMenu.payroll": "الرواتب",
@@ -154,6 +178,10 @@
     "nav.invoices": "الفواتير",
     "nav.maintenance": "الصيانة",
     "nav.marketplace": "السوق",
+    "nav.marketplace.bidding": "المناقصات / طلبات العروض",
+    "nav.marketplace.catalog": "كتالوج الخدمات والقطع",
+    "nav.marketplace.procurement": "المشتريات",
+    "nav.marketplace.vendors": "الموردون",
     "nav.marketplaceMenu.bidding": "المناقصات / طلبات العروض",
     "nav.marketplaceMenu.catalog": "كتالوج الخدمات والقطع",
     "nav.marketplaceMenu.procurement": "المشتريات",
@@ -164,23 +192,40 @@
     "nav.profile": "الملف الشخصي",
     "nav.projects": "المشاريع",
     "nav.properties": "العقارات",
+    "nav.properties.documents": "المستندات",
+    "nav.properties.inspections": "التفتيش",
+    "nav.properties.leases": "إدارة عقود الإيجار",
+    "nav.properties.list": "قائمة وتفاصيل العقارات",
+    "nav.properties.unitsTenants": "الوحدات والمستأجرون",
     "nav.propertiesMenu.documents": "المستندات",
     "nav.propertiesMenu.inspections": "التفتيش",
     "nav.propertiesMenu.leases": "إدارة عقود الإيجار",
     "nav.propertiesMenu.list": "قائمة وتفاصيل العقارات",
     "nav.propertiesMenu.unitsTenants": "الوحدات والمستأجرون",
     "nav.reports": "التقارير",
+    "nav.reports.custom": "التقارير المخصصة",
+    "nav.reports.dashboards": "لوحات المعلومات",
+    "nav.reports.standard": "التقارير القياسية",
     "nav.reportsMenu.custom": "التقارير المخصصة",
     "nav.reportsMenu.dashboards": "لوحات المعلومات",
     "nav.reportsMenu.standard": "التقارير القياسية",
     "nav.rfqs": "طلبات العروض",
     "nav.settings": "الإعدادات",
     "nav.support": "الدعم",
+    "nav.support.chat": "الدردشة المباشرة",
+    "nav.support.kb": "قاعدة المعرفة",
+    "nav.support.sla": "مراقبة اتفاقية مستوى الخدمة",
+    "nav.support.tickets": "التذاكر",
     "nav.supportMenu.chat": "الدردشة المباشرة",
     "nav.supportMenu.kb": "قاعدة المعرفة",
     "nav.supportMenu.sla": "مراقبة اتفاقية مستوى الخدمة",
     "nav.supportMenu.tickets": "التذاكر",
     "nav.system": "إدارة النظام",
+    "nav.system.billing": "الاشتراكات والفوترة",
+    "nav.system.integrations": "التكاملات",
+    "nav.system.roles": "الأدوار والصلاحيات",
+    "nav.system.settings": "إعدادات النظام",
+    "nav.system.users": "إدارة المستخدمين",
     "nav.systemMenu.billing": "الفوترة",
     "nav.systemMenu.integrations": "التكاملات",
     "nav.systemMenu.roles": "الأدوار والصلاحيات",
@@ -192,49 +237,6 @@
     "nav.workOrders.create": "إنشاء أمر عمل",
     "nav.workOrders.history": "سجل الخدمات",
     "nav.workOrders.preventive": "الصيانة الوقائية",
-    "nav.workOrders.trackAssign": "التتبع والتعيين",
-    "nav.properties.list": "قائمة وتفاصيل العقارات",
-    "nav.properties.unitsTenants": "الوحدات والمستأجرون",
-    "nav.properties.leases": "إدارة عقود الإيجار",
-    "nav.properties.inspections": "التفتيش",
-    "nav.properties.documents": "المستندات",
-    "nav.finance.invoices": "الفواتير",
-    "nav.finance.payments": "المدفوعات",
-    "nav.finance.expenses": "المصروفات",
-    "nav.finance.budgets": "الميزانيات",
-    "nav.finance.reports": "تقارير المالية",
-    "nav.hr.directory": "دليل الموظفين",
-    "nav.hr.attendanceLeave": "الحضور والإجازات",
-    "nav.hr.payroll": "الرواتب",
-    "nav.hr.recruitment": "التوظيف (ATS)",
-    "nav.hr.training": "التدريب",
-    "nav.hr.performance": "الأداء",
-    "nav.admin.doa": "تفويض الصلاحيات",
-    "nav.admin.policies": "السياسات والإجراءات",
-    "nav.admin.assets": "إدارة الأصول",
-    "nav.admin.facilitiesFleet": "المرافق والأسطول",
-    "nav.crm.directory": "دليل العملاء",
-    "nav.crm.leads": "العملاء المحتملون",
-    "nav.crm.contracts": "العقود والتجديدات",
-    "nav.crm.feedback": "الملاحظات والشكاوى",
-    "nav.marketplace.vendors": "الموردون",
-    "nav.marketplace.catalog": "كتالوج الخدمات والقطع",
-    "nav.marketplace.procurement": "المشتريات",
-    "nav.marketplace.bidding": "المناقصات / طلبات العروض",
-    "nav.support.tickets": "التذاكر",
-    "nav.support.kb": "قاعدة المعرفة",
-    "nav.support.chat": "الدردشة المباشرة",
-    "nav.support.sla": "مراقبة اتفاقية مستوى الخدمة",
-    "nav.compliance.contracts": "العقود",
-    "nav.compliance.disputes": "النزاعات والشكاوى",
-    "nav.compliance.auditRisk": "المراجعة والمخاطر",
-    "nav.reports.standard": "التقارير القياسية",
-    "nav.reports.custom": "التقارير المخصصة",
-    "nav.reports.dashboards": "لوحات المعلومات",
-    "nav.system.users": "إدارة المستخدمين",
-    "nav.system.roles": "الأدوار والصلاحيات",
-    "nav.system.billing": "الاشتراكات والفوترة",
-    "nav.system.integrations": "التكاملات",
-    "nav.system.settings": "إعدادات النظام"
+    "nav.workOrders.trackAssign": "التتبع والتعيين"
   }
 }
