fix(pr-313-phase1): Quick wins - comment fix, i18n skip link, test script improvements
- BUG-1: Updated redirect comment to clarify /dashboard fallback (not /fm/dashboard)
- STYLE-1: Added i18n support for skip-to-content link (EN: 'Skip to content', AR: 'انتقل إلى المحتوى')
- TEST-1: Added process.exit(1) to test-bcrypt.js for CI compatibility
- TEST-2: Fixed mongoose model pattern to avoid OverwriteModelError (models.User || model())

Related to PR #313 review comments from CodeRabbit

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -889,6 +889,7 @@
     "brand": "فكس إت",
     "backToHome": "العودة للصفحة الرئيسية",
     "signIn": "تسجيل الدخول",
+    "skipToContent": "انتقل إلى المحتوى",
     "unsavedChanges": "تغييرات غير محفوظة",
     "unsavedChangesMessage": "لديك تغييرات غير محفوظة. هل أنت متأكد أنك تريد مغادرة هذه الصفحة؟",
     "discard": "تجاهل التغييرات",
