--- a/i18n/en.json
+++ b/i18n/en.json
@@ -889,6 +889,7 @@
     "brand": "FIXZIT",
     "backToHome": "Back to Home",
     "signIn": "Sign In",
+    "skipToContent": "Skip to content",
     "unsavedChanges": "Unsaved Changes",
     "unsavedChangesMessage": "You have unsaved changes. Are you sure you want to leave this page?",
     "discard": "Discard Changes",
