feat(i18n): add missing translation keys for topbar, navigation, and pagination
- topbar.modules, topbar.collapseMenu

- navigation.back, navigation.saving

- pagination.showing/to/of/results

Resolves 8 missing keys identified in translation audit

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -1041,6 +1041,10 @@
       "arabic": "العربية"
     }
   },
+  "topbar": {
+    "modules": "الوحدات",
+    "collapseMenu": "إخفاء قائمة الوحدات"
+  },
   "navigation": {
     "home": "الرئيسية",
     "dashboard": "لوحة التحكم",
@@ -1052,7 +1056,15 @@
     "reports": "التقارير",
     "settings": "الإعدادات",
     "help": "المساعدة",
-    "logout": "تسجيل الخروج"
+    "logout": "تسجيل الخروج",
+    "back": "رجوع",
+    "saving": "جاري الحفظ..."
+  },
+  "pagination": {
+    "showing": "عرض",
+    "to": "إلى",
+    "of": "من",
+    "results": "نتيجة"
   },
   "errors": {
     "generic": "حدث خطأ ما. يرجى المحاولة مرة أخرى.",
