--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1041,6 +1041,10 @@
       "arabic": "Arabic"
     }
   },
+  "topbar": {
+    "modules": "Modules",
+    "collapseMenu": "Hide module menu"
+  },
   "navigation": {
     "home": "Home",
     "dashboard": "Dashboard",
@@ -1052,7 +1056,15 @@
     "reports": "Reports",
     "settings": "Settings",
     "help": "Help",
-    "logout": "Logout"
+    "logout": "Logout",
+    "back": "Back",
+    "saving": "Saving..."
+  },
+  "pagination": {
+    "showing": "Showing",
+    "to": "to",
+    "of": "of",
+    "results": "results"
   },
   "errors": {
     "generic": "Something went wrong. Please try again.",
